--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -18,6 +18,7 @@
 .container {
     max-width: 1500px;
     margin: 0 auto;
+
     header {
         display: flex;
         justify-content: space-between;
@@ -83,6 +84,76 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+                gap: 1rem;
+
+                .filters {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    .cards-filters {
+                        width: 100%;
+                        overflow-x: hidden;
+                        display: flex;
+                        gap: .5rem;
+
+                        .card-filter {
+                            display: flex;
+                            align-items: center;
+                            gap: .5rem;
+                            cursor: pointer;
+                            flex-shrink: 0;
+                            padding: 5px 10px;
+                            border-radius: 5px;
+                            background-color: rgba($color: #344156, $alpha: 0.3);   
+
+                            &.active {
+                                background-color: var(--topbar-bg);
+                                span {
+                                    color: #fff;
+                                }
+                            }
+
+                            span {
+                                font-size: 12px;
+                            }
+
+                            .red {
+                                width: 10px;
+                                height: 10px;
+                                background-color: red;
+                                border-radius: 50%;
+                            }
+
+                            .green {
+                                width: 10px;
+                                height: 10px;
+                                background-color: green;
+                                border-radius: 50%;
+                            }
+                        }
+                    }
+
+
+                    .filter {
+                        .p-inputtext {
+                            width: 100% !important;
+                            padding: 5px 10px;
+                            font-size: 14px;
+                            border-radius: 5px;
+                            background-color: transparent;
+                            border: 1px solid var(--topbar-bg);
+                            color: var(--text-main);
+
+                            &::placeholder {
+                                font-size: 12px;
+                                color: var(--text-main);
+                            }
+                        }
+                    }
+
+                }
 
                 .clientes {
                     height: 80%;
@@ -114,22 +185,47 @@
                                 font-size: 12px;
                             }
                         }
+                        .btns{
+                            display: flex;
+                            align-items: center;
+                            gap: 1rem;
 
-                        .edit {
-                            width: 30px;
-                            height: 30px;
-                            display: grid;
-                            place-content: center;
-                            border-radius: 50%;
-                            cursor: pointer;
-                            transition: background-color 0.3s ease;
-                            background-color: var(--topbar-bg);
+                            .status {
+                                display: flex;
 
-                            i {
-                                font-size: 14px;
-                                color: white;
+                                .red {
+                                    width: 10px;
+                                    height: 10px;
+                                    background-color: red;
+                                    border-radius: 50%;
+                                }
+    
+                                .green {
+                                    width: 10px;
+                                    height: 10px;
+                                    background-color: green;
+                                    border-radius: 50%;
+                                }
+    
+                            }
+    
+                            .edit {
+                                width: 30px;
+                                height: 30px;
+                                display: grid;
+                                place-content: center;
+                                border-radius: 50%;
+                                cursor: pointer;
+                                transition: background-color 0.3s ease;
+                                background-color: var(--topbar-bg);
+    
+                                i {
+                                    font-size: 14px;
+                                    color: white;
+                                }
                             }
                         }
+
                     }
                 }
 
@@ -267,7 +363,6 @@
                             padding: 5px 10px;
                             background-color: rgba($color: #344156, $alpha: 0.3);
                             border-radius: 5px;
-                            z-index: 9999;
 
                             .delete {
                                 cursor: pointer;
@@ -453,7 +548,8 @@
     width: 30vw !important;
     background-color: white !important;
     color: black !important;
-    .dialog-content{
+
+    .dialog-content {
         display: flex;
         flex-direction: column;
         gap: 1rem;
@@ -474,7 +570,8 @@
             color: var(--text-main);
         }
     }
-    .createTag{
+
+    .createTag {
         display: flex;
         align-items: center;
         gap: .5rem;
@@ -489,15 +586,15 @@
             border: 1px solid var(--topbar-bg);
             color: var(--text-main);
             flex: 1;
-    
+
             &::placeholder {
                 font-size: 12px;
                 color: var(--text-main);
             }
         }
-      
-        
-        button{
+
+
+        button {
             // width: 100% !important;
             padding: 5px 20px !important;
             background-color: var(--topbar-bg);
@@ -508,7 +605,7 @@
             border-radius: 5px;
             cursor: pointer;
 
-            &:disabled{
+            &:disabled {
                 background-color: rgba($color: #344156, $alpha: .5);
             }
 
@@ -520,41 +617,58 @@
         flex-direction: column;
         gap: .5rem;
 
-        .warning{
+        .warning {
             font-size: 12px;
             color: red;
         }
 
-       
-        button {
-            padding: 10px 0;
-            background-color: var(--topbar-bg);
-            border: none;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
+        &.buttons {
+            display: flex;
+            flex-direction: row;
+            gap: .5rem;
+            justify-content: space-between;
+            align-items: center;
 
-            &:disabled{
-                background-color: rgba($color: #344156, $alpha: .5);
+            button {
+                width: 100%;
+                padding: 10px 0;
+                background-color: var(--topbar-bg);
+                border: none;
+                color: white;
+                border-radius: 5px;
+                cursor: pointer;
+
+                &:disabled {
+                    background-color: rgba($color: #344156, $alpha: .5);
+                }
+
+                &.delete {
+                    border: 1px solid var(--topbar-bg);
+                    background-color: transparent;
+                    color: var(--topbar-bg);
+                }
             }
         }
-       
+
+
+
     }
 
-    .palavras-chave{
+    .palavras-chave {
         display: flex;
         flex-direction: column;
         gap: .5rem;
         padding-top: 20px;
 
-        h2{
+        h2 {
             font-size: 16px;
         }
-        .tags-list{
+
+        .tags-list {
             display: flex;
             flex-wrap: wrap;
             width: 100%;
-            height: 200px;
+            height: 150px;
             gap: .5rem;
             align-items: flex-start;
             overflow-y: scroll;
