--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -24,12 +24,12 @@
 
         <div class="content">
           <div class="qrcode">
-            <div class="conectar-whatsapp" (click)="conectarWhatsapp()" *ngIf="!status.isReady">
+            <div class="conectar-whatsapp" *ngIf="!status.isReady">
               <i class="fa-solid fa-qrcode"></i>
               <span>Conectar whatsapp</span>
             </div>
-            <div *ngIf="status.qrCode && !status.isReady">
-              <img [src]="status.qrCode" alt="QR Code do WhatsApp">
+            <div>
+              <img [src]="'data:image/png;base64,' + qrCode" alt="QR Code" />
             </div>
             <div *ngIf="status.isReady">
               ✅ Conectado
@@ -39,11 +39,11 @@
 
 
       </div>
-      <!-- <div class="card">
+      <div class="card">
         <div class="header">
           <h2>Mapa</h2>
         </div>
-      </div> -->
+      </div>
     </div>
 
     <div class="terceira-card">
@@ -133,6 +133,39 @@
         <div class="filter">
           <input type="text" placeholder="Pesquisar por nome, telefone ou endereço" pInputText [(ngModel)]="searchTerm">
         </div>
+      </div>
+      <div class="clientes">
+        <div class="cliente" *ngFor="let cliente of filteredClients; let i = index">
+
+          <div class="dados">
+            <div class="nome">{{cliente.nome}}</div>
+            <div class="telefone">
+              {{formatarTelefone(cliente.telefone)}}
+            </div>
+          </div>
+
+
+
+          <div class="btns">
+            <div class="edit" (click)="editClient(cliente, i)">
+              <i class="fa-solid fa-pencil"></i>
+            </div>
+          </div>
+        </div>
+        <span style="font-size: 14px;" *ngIf="filteredClients.length === 0">Nenhum cliente encontrado</span>
+      </div>
+      <div class="add-cliente" (click)="displayCriarCliente = true">
+        Criar novo
+      </div>
+    </div>
+
+    <div class="card cliente-card">
+      <h2>Status equipamentos</h2>
+      <div class="filters">
+        <div class="filter">
+          <input type="text" placeholder="Pesquisar por nome, telefone ou endereço" pInputText
+            [(ngModel)]="searchTermEquipamentos">
+        </div>
         <div class="cards-filters">
           <div class="cards-filters">
             <!-- Card “Sem sinal” -->
@@ -149,31 +182,31 @@
           </div>
         </div>
       </div>
+
+
       <div class="clientes">
-        <div class="cliente" *ngFor="let cliente of filteredClients; let i = index">
-
+        <div class="equipamento" *ngFor="let equipamento of filteredEquipamentos; let i = index">
           <div class="dados">
-            <div class="nome">{{cliente.nome}}</div>
-            <div class="telefone">
-              {{formatarTelefone(cliente.telefone)}}
-            </div>
+            <div class="nome">{{equipamento.nome}}</div>
           </div>
-
-
 
           <div class="btns">
             <div class="status">
-              <div [ngClass]="{'red': !cliente.sinal, 'green': cliente.sinal}"></div>
+              <div [ngClass]="{'red': equipamento.status === 'offline', 'green': equipamento.status === 'online'}">
+              </div>
             </div>
-            <div class="edit" (click)="editClient(cliente, i)">
+            <div class="edit" (click)="editEquipamento(equipamento, i)">
               <i class="fa-solid fa-pencil"></i>
             </div>
           </div>
         </div>
-        <span style="font-size: 14px;" *ngIf="filteredClients.length === 0">Nenhum cliente encontrado</span>
-      </div>
-      <div class="add-cliente" (click)="displayCriarCliente = true">
+
+        <span style="font-size: 14px;" *ngIf="filteredEquipamentos.length === 0">
+          Nenhum cliente encontrado
+        </span>
+        <!-- <div class="add-cliente" (click)="displayCriarCliente = true">
         Criar novo
+      </div> -->
       </div>
     </div>
 
@@ -237,6 +270,49 @@
           <input type="text" pInputText placeholder="Digite uma palavra-chave" [(ngModel)]="newTag" name="newTag"
             (keydown.enter)="addTag(); $event.preventDefault()" [ngModelOptions]="{standalone: true}">
           <button type="button" (click)="addTag()">Add tag</button>
+        </div>
+      </div>
+
+      <!-- Botão Criar -->
+      <div class="form-group buttons">
+        <button (click)="deleteContrato()" *ngIf="editingIndex > -1" class="delete">Deletar</button>
+        <button type="submit" label="Criar" [disabled]="clientForm.invalid"> {{ editingIndex > -1 ? 'Salvar' : 'Criar
+          cliente' }}</button>
+      </div>
+
+    </div>
+  </form>
+</p-dialog>
+<p-dialog header="Dados do equipamento" [(visible)]="displayCriarEquipamento" modal="true" [style]="{ width: '350px' }"
+  (onHide)="onDialogHide()" class="dialog-cliente">
+
+  <form [formGroup]="equipamentoForm" (ngSubmit)="createContrato()">
+    <div class="dialog-content">
+      <div class="form-group">
+        <label for="nome">Nome</label>
+        <input id="nome" type="text" pInputText formControlName="nome" placeholder="Digite o nome do cliente">
+      </div>
+      <div class="form-group">
+        <label for="localidade">Localidade</label>
+        <input id="localidade" type="text" pInputText formControlName="localidade"
+          placeholder="Digite a localidade do equipamento">
+      </div>
+      <div class="form-group">
+        <label for="ip">IP</label>
+        <input id="ip" type="text" pInputText formControlName="ip" placeholder="Digite o IP do equipamento">
+      </div>
+      <div class="form-group">
+        <label for="endereco">Endereço</label>
+        <input id="endereco" type="text" pInputText formControlName="endereco" placeholder="Digite o endereço">
+      </div>
+
+      <!-- Seção de Tags -->
+      <div class="palavras-chave">
+        <h2>Mapa</h2>
+
+        <!-- Lista de tags atuais -->
+        <div class="tags-list">
+
         </div>
       </div>
 
